[package]
name = "alp"
description = "A pure Rust implementation of Adaptive Lossless floating-Point Compression by Afroozeh et al."
version = "0.0.1"
license = "Apache-2.0"
repository = "https://github.com/spiraldb/alp"
edition = "2021"

[dependencies]
fastlanes = "0.1"
num-traits = "0.2.19"
serde = { version = "1", optional = true, features = ["derive"] }
